# ResEdit

./: CMakeLists.txt  CTestConfig.cmake  Main.cpp  README.md  SetEnv.bat.in  ctkCommandLineParser.h
CMake/: ctkResEditVersionConfig.h.in  ctkVersionSource.cmake  reseditDashboardDriverScript.cmake  reseditDashboardScript.TEMPLATE.cmake
Testing/: App4Test.aps  App4Test.rc  App4TestMain.cpp  CMakeLists.txt  ResEditCommandHelpTest.cmake  ResEditCommandListTest.cmake  ResEditCommandUpdateIcoOnExeWithIcoTest.cmake  ResEditCommandUpdateIcoOnExeWithoutIcoTest.cmake  ResEditCommandUpdateIcoTest.cmake  ResEditNoCommandTest.cmake  ResEditTestMacros.cmake  ResEditTestPrerequisites.cmake.in
